# tazama

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  VERSION  deps-report.md  libnull.rlib
.agnos-agent/: manifest.toml
.github/actions/setup-rust-env/: action.yml
.github/workflows/: ci.yml  dependency-review.yml  dependency-update.yml  release-automation.yml  release.yml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/src/: commands.rs  frame_source.rs  lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/benches/: keyframe.rs
crates/core/src/: clip.rs  command.rs  effect.rs  keyframe.rs  lib.rs  marker.rs  media_info.rs  multicam.rs  playback.rs  plugin.rs  project.rs  timeline.rs
crates/gpu/: Cargo.toml
crates/gpu/shaders/: color_grade.comp  color_grade.spv  composite.comp  composite.spv  crop.comp  crop.spv  dissolve.comp  dissolve.spv  fade.comp  fade.spv  lut.comp  lut.spv  transform.comp  transform.spv  wipe.comp  wipe.spv
crates/gpu/src/: buffer.rs  context.rs  export_render.rs  frame_source.rs  hwaccel.rs  lib.rs  lut.rs  pipeline.rs  preview.rs  render.rs  shader.rs  text.rs
crates/gpu/src/render/: collect.rs  dispatch.rs  effects.rs  mod.rs  transitions.rs
crates/gpu/tests/: gpu_integration.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/mcp/tests/: integration.rs
crates/media/: Cargo.toml
crates/media/benches/: dsp.rs  new_features.rs  tarang_vs_gstreamer.rs
crates/media/src/: ai.rs  convert.rs  error.rs  hwaccel.rs  lib.rs  loudness.rs  mix.rs  playback.rs  plugin_runtime.rs  probe.rs  proxy.rs  record.rs  thumbnail.rs  waveform.rs
crates/media/src/decode/: audio.rs  mod.rs  video.rs
crates/media/src/dsp/: compressor.rs  eq.rs  mod.rs  noise_reduction.rs  reverb.rs
crates/media/src/export/: mod.rs  pipeline.rs  tarang_pipeline.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 20260313000001_initial.sql
crates/storage/src/: autosave.rs  db.rs  lib.rs  media.rs  project.rs
docs/adr/: 001-rust-vulkan-gstreamer.md  002-gpu-compute-pipeline.md  003-export-audio-mixing.md
docs/development/: benchmarks.md  gpu-guide.md  roadmap.md  testing.md
recipes/marketplace/: tazama.toml
scripts/: bump-version.sh  compile_shaders.sh  create-tarang-stubs.sh  generate-test-fixtures.sh  setup-dev.sh
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/export/: ExportDialog.tsx  ExportProgress.tsx
ui/src/components/inspector/: AITools.tsx  ClipInspector.tsx  EffectEditor.tsx  EffectList.tsx  Inspector.tsx  KeyframeEditor.tsx  LoudnessMeter.tsx  LutPicker.tsx  NoSelection.tsx  TextEditor.tsx  TrackInspector.tsx  TransformEditor.tsx
ui/src/components/layout/: AppShell.tsx  PanelResizer.tsx
ui/src/components/media/: ImportButton.tsx  MediaBrowser.tsx  MediaItem.tsx
ui/src/components/mixer/: MixerPanel.tsx
ui/src/components/multicam/: MultiCamViewer.tsx
ui/src/components/preview/: PreviewCanvas.tsx  PreviewMonitor.tsx
ui/src/components/project/: NewProjectDialog.tsx  WelcomeScreen.tsx
ui/src/components/shared/: ErrorBoundary.tsx  Modal.tsx  NumberInput.tsx  Slider.tsx  Toast.tsx
ui/src/components/timeline/: ClipBlock.tsx  ClipContextMenu.tsx  KeyframeOverlay.tsx  Playhead.tsx  TimelinePanel.tsx  TimelineRuler.tsx  TrackHeader.tsx  TrackList.tsx  TrackRow.tsx
ui/src/components/timeline/hooks/: useDragClip.ts  useRazorCut.ts  useSnap.ts  useTrimClip.ts
ui/src/components/toolbar/: EditTools.tsx  FileActions.tsx  TimeDisplay.tsx  Toolbar.tsx  TransportControls.tsx
ui/src/hooks/: useKeyboardShortcuts.ts
ui/src/ipc/: commands.ts
ui/src/stores/: historyStore.ts  playbackStore.ts  projectStore.ts  uiStore.ts
ui/src/types/: index.ts
