[package]
name = "tazama"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "tazama"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tazama-core = { path = "../core" }
tazama-media = { path = "../media" }
tazama-storage = { path = "../storage" }
tazama-gpu = { path = "../gpu" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories = "6"
base64.workspace = true
tarang = { version = "0.20.3", features = ["openh264", "openh264-enc", "vpx", "dav1d"] }
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
serde_json.workspace = true
