[package]
name = "tazama-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tazama-core = { path = "../core" }
ash.workspace = true
gpu-allocator.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
tokio.workspace = true
cosmic-text = "0.12"
ai-hwaccel.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
