[package]
name = "tazama-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tazama-mcp"
path = "src/main.rs"

[dependencies]
tazama-core = { path = "../core" }
tazama-storage = { path = "../storage" }
tazama-media = { path = "../media" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "io-std"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
