[package]
name = "tazama-media"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tazama-core = { path = "../core" }
serde.workspace = true
gstreamer.workspace = true
gstreamer-video.workspace = true
gstreamer-audio.workspace = true
gstreamer-app.workspace = true
gstreamer-pbutils.workspace = true
tokio.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
cpal.workspace = true
rustfft = "6"
tarang-core = { path = "../../../tarang/crates/tarang-core", optional = true }
tarang-audio = { path = "../../../tarang/crates/tarang-audio", optional = true }
tarang-demux = { path = "../../../tarang/crates/tarang-demux", optional = true }
tarang-video = { path = "../../../tarang/crates/tarang-video", features = ["openh264", "vpx", "dav1d"], optional = true }
tarang-ai = { path = "../../../tarang/crates/tarang-ai", optional = true }
symphonia = { version = "0.5", features = ["all"], optional = true }
wasmtime = { version = "29", optional = true }

[features]
default = []
tarang = ["dep:tarang-core", "dep:tarang-audio", "dep:tarang-demux", "dep:tarang-video", "dep:tarang-ai", "dep:symphonia"]
plugins = ["dep:wasmtime"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json.workspace = true
