[package]
name = "tazama-media"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tazama-core = { path = "../core" }
serde.workspace = true
gstreamer.workspace = true
gstreamer-video.workspace = true
gstreamer-audio.workspace = true
gstreamer-app.workspace = true
gstreamer-pbutils.workspace = true
tokio.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
cpal.workspace = true
rustfft = "6"
tarang = { version = "0.19.3", features = ["openh264", "vpx", "dav1d"], optional = true }
symphonia = { version = "0.5", features = ["all"], optional = true }
ai-hwaccel.workspace = true
wasmtime = { version = "29", optional = true }

[features]
default = []
tarang = ["dep:tarang", "dep:symphonia"]
plugins = ["dep:wasmtime"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json.workspace = true
